Restore adding stops to graph